--- a/SeniorCareManager.WebAPI/.gitignore
+++ b/SeniorCareManager.WebAPI/.gitignore
@@ -65,6 +65,7 @@ BenchmarkDotNet.Artifacts/
 project.lock.json
 project.fragment.lock.json
 artifacts/
+Migrations/
 
 # ASP.NET Scaffolding
 ScaffoldingReadMe.txt
