--- a/SeniorCareManager.WebAPI/SeniorCareManager.WebAPI.csproj
+++ b/SeniorCareManager.WebAPI/SeniorCareManager.WebAPI.csproj
@@ -21,4 +21,8 @@
       <PackageReference Include="Swashbuckle.AspNetCore" Version="7.1.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Services\Utils\" />
+    </ItemGroup>
+
 </Project>
