--- a/SeniorCareManager.WebAPI/appsettings.Development.json
+++ b/SeniorCareManager.WebAPI/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Host=localhost;Port=5432;Database=db_seniorcare;Username=postgres;Password=postdba;"
+        "DefaultConnection": "Host=localhost;Port=5432;Database=db_seniorcare;Username=postgres;Password=3692;"
     },
   "Logging": {
     "LogLevel": {
