--- a/SeniorCareManager.WebAPI/appsettings.json
+++ b/SeniorCareManager.WebAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=db_seniorcare;Username=postgres;password=postdba;"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=db_seniorcare;Username=postgres;password=123456;"
   },
   "Logging": {
     "LogLevel": {
